<resources>
    <string name="app_name">Let\'s Meet</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- For the toolbar -->
    <string name="toolbar_page">Nom de la page</string>
    <string name="toolbar_search">Rechercher</string>

    <!-- For the drawer menu -->
    <string name="profile">Nom de profil</string>
    <string name="profile_img">Photo de profil</string>
    <string name="flux">Flux</string>
    <string name="my_events">Mes évènements</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Paramètres</string>
    <string name="disconnection">Déconnexion</string>

    <!-- For the settings -->
    <string name="setting_profile_pic">Changer ma photo de profil</string>
    <string name="setting_profile_name">Changer mon pseudo</string>
    <string name="setting_password">Changer mon mot de passe</string>
    <string name="setting_contact">Nous contacter</string>
    <string name="setting_delete_account">Supprimer mon compte</string>

    <!-- For the events -->
    <string name="event_title">Titre</string>
    <string name="event_img">Image</string>
    <string name="event_type">Type</string>
    <string name="event_type_img">Type img</string>
    <string name="event_description">Description</string>
    <string name="event_address">Adresse</string>
    <string name="event_city">City</string>
    <string name="event_date_start">JJ/MM/AAAA</string>
    <string name="event_date_end">JJ/MM/AAAA</string>
    <string name="event_hour_start">HH:MM</string>
    <string name="event_hour_end">HH:MM</string>

    <!-- For the APIs -->
    <string name="api_key_strasbourg">https://data.strasbourg.eu/api/records/1.0/search/?dataset=lieux_culture</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- For the Authentification -->
    <string name="auth_city">à Strasbourg</string>
    <string name="auth_sign_in">Connexion</string>
    <string name="auth_new_account">Créer un nouveau compte</string>
    <string name="auth_facebook_id" translatable="false"></string>
    <string name="auth_facebook_protocol_scheme" translatable="false"></string>
    <string name="auth_connection_choice">Se connecter avec :</string>
    <string name="auth_mail">Adresse mail</string>
    <string name="auth_google">Google</string>



</resources>