<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInActivity"
    android:layout_margin="@dimen/fab_margin"
    android:orientation="vertical"
    android:gravity="top|center">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="70dp"
        android:text="@string/app_name"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_city"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_connection_choice"
        app:layout_constraintBottom_toTopOf="@+id/btn_auth_sign_in_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/fab_margin"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_auth_sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        tools:ignore="signInGoogle"/>

    <Button
        android:id="@+id/btn_auth_sign_in_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:drawableLeft="@drawable/ic_action_name"
        android:onClick="signInMail"
        android:text="@string/auth_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth_sign_in_google"
        tools:ignore="OnClick" />

    <!--<Button
        android:id="@+id/btn_auth_sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signInGoogle"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/auth_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth_sign_in_mail"
        tools:ignore="OnClick"
        android:layout_marginBottom="@dimen/fab_margin"
        android:drawableLeft="@drawable/ic_baseline_mail_24"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/auth_new_account"
        android:onClick="newAccount"
        tools:ignore="OnClick" /> -->



</androidx.constraintlayout.widget.ConstraintLayout>